# OpenCPN

./: .clang-format  .gitattributes  .gitignore  .vimrc.local  CMakeLists.txt  NSIS.template.in  README  README.md  linuxbuild.sh  version.h.in  winbuild.bat
cmake/: ExternBzip2.cmake  ExternPugixml.cmake  ExternTcd.cmake  ExternWxJson.cmake  ExternZlib.cmake
include/: ChInfoWin.h  OCPNListCtrl.h  PianoWin.h  S57ClassRegistrar.h  StatWin.h  ThumbWin.h  TrackPropDlg.h  bbox.h  chart1.h  chartbase.h  chartimg.h  chartsymbols.h  chcanv.h  cm93.h  cutil.h  datastream.h  dychart.h  georef.h  gpxdocument.h  gshhs.h  kml.h  mygeom.h  navutil.h  ocpn_pixel.h  ocpn_plugin.h  ocpn_types.h  ocpndc.h  options.h  routeman.h  routeprintout.h  s52plib.h  s52s57.h  s52utils.h  s57chart.h  scrollingdialog.h  styles.h  tcmgr.h  triangulate.h  vector2D.h
plugins/grib_pi/: CMakeLists.txt
po/: POTFILES.in  opencpn.pot  opencpn_ca_ES.po  opencpn_cs_CZ.po  opencpn_da_DK.po  opencpn_de_DE.po  opencpn_el_GR.po  opencpn_es_ES.po  opencpn_et_ET.po  opencpn_fi_FI.po  opencpn_fr_FR.po  opencpn_gl_ES.po  opencpn_hu_HU.po  opencpn_it_IT.po  opencpn_nb_NO.po  opencpn_nl_NL.po  opencpn_pl_PL.po  opencpn_pt_BR.po  opencpn_pt_PT.po  opencpn_ru_RU.po  opencpn_sv_SE.po  opencpn_tr_TR.po  opencpn_zh_TW.po
src/: AboutDialog.cpp  AboutDialog.h  AnchorDist.cpp  AnchorDist.h  AnnunText.cpp  AnnunText.h  App.cpp  App.h  BoundingBox.cpp  BoundingBox.h  CDI.cpp  CDI.h  CM93DSlide.cpp  CM93DSlide.h  ChInfoWin.cpp  ChInfoWin.h  ChartCanvas.cpp  ChartCanvas.h  ChartDirInfo.h  ChartDirectoryInfo.h  ChartGroupsUI.cpp  ChartGroupsUI.h  ChartPlugInWrapper.cpp  ChartPlugInWrapper.h  ColorScheme.h  Config.cpp  Config.h  ConnectionParams.cpp  ConnectionParams.h  ConsoleCanvas.cpp  ConsoleCanvas.h  DataStream.cpp  DataStream.h  Daylight.cpp  Daylight.h  DefaultStyleManager.cpp  DefaultStyleManager.h  DimeControl.cpp  DimeControl.h  EmbossData.cpp  (+272 more)
src/ais/: AISTargetAlertDialog.cpp  AISTargetAlertDialog.h  AISTargetListDialog.cpp  AISTargetListDialog.h  AISTargetQueryDialog.cpp  AISTargetQueryDialog.h  AISTargetTrackPoint.h  AIS_Bitstring.cpp  AIS_Bitstring.h  AIS_Decoder.cpp  AIS_Decoder.h  AIS_Target_Data.cpp  AIS_Target_Data.h  ais.cpp  ais.h
src/bitmaps/: styles.xml
src/chart/: CM93Chart.cpp  CM93Chart.h  CM93Dictionary.cpp  CM93Dictionary.h  CM93Geometry.h  CM93Manager.cpp  CM93Manager.h  CM93OffsetDialog.cpp  CM93OffsetDialog.h  CM93_attr_block.cpp  CM93_attr_block.h  CM93compchart.cpp  CM93compchart.h  COVR_Set.cpp  COVR_Set.h  CacheEntry.h  ChartBase.cpp  ChartBase.h  ChartBaseBSB.cpp  ChartBaseBSB.h  ChartClassDescriptor.cpp  ChartClassDescriptor.h  ChartDB.cpp  ChartDB.h  ChartDatabase.cpp  ChartDatabase.h  ChartDummy.cpp  ChartDummy.h  ChartFamily.h  ChartGEO.cpp  ChartGEO.h  ChartGroup.h  ChartGroupElement.h  ChartKAP.cpp  ChartKAP.h  ChartStack.cpp  ChartStack.h  ChartSymbol.h  ChartSymbols.cpp  ChartSymbols.h  (+39 more)
src/garmin/: GARMIN_Serial_Thread.cpp  GARMIN_Serial_Thread.h  GARMIN_USB_Thread.cpp  GARMIN_USB_Thread.h  GarminProtocolHandler.cpp  GarminProtocolHandler.h  cpo_satellite_data.h  unit_info.h  usb_packet.h
src/geo/: BoundingBox.cpp  BoundingBox.h  ExtendedGeometry.cpp  ExtendedGeometry.h  GeoRef.cpp  GeoRef.h  Geodesic.cpp  Geodesic.h  LatLonBoundingBox.cpp  LatLonBoundingBox.h  LineClip.cpp  LineClip.h  PolyTessGeo.cpp  PolyTessGeo.h  PolyTessGeoTrap.cpp  PolyTessGeoTrap.h  PolyTrapGroup.cpp  PolyTrapGroup.h  PolyTriGroup.cpp  PolyTriGroup.h  Polygon.cpp  Polygon.h  Position.cpp  Position.h  TriPrim.cpp  TriPrim.h  lmfit.cpp  lmfit.h  triangulate.cpp  triangulate.h
src/global/: AIS.h  ColorManager.h  ColorProvider.h  ColorScheme.h  GUI.h  Navigation.h  OCPN.cpp  OCPN.h  OCPN_AIS.cpp  OCPN_AIS.h  OCPN_GUI.cpp  OCPN_GUI.h  OCPN_Navigation.cpp  OCPN_Navigation.h  OCPN_Runtime.cpp  OCPN_Runtime.h  OCPN_System.cpp  OCPN_System.h  OCPN_WatchDog.cpp  OCPN_WatchDog.h  Runtime.h  System.h  WatchDog.h
src/gpx/: GpxBoundsElement.h  GpxCopyrightElement.h  GpxDocument.cpp  GpxDocument.h  GpxEmailElement.h  GpxExtensionsElement.cpp  GpxExtensionsElement.h  GpxLinkElement.cpp  GpxLinkElement.h  GpxMetadataElement.h  GpxPersonElement.h  GpxRootElement.cpp  GpxRootElement.h  GpxRteElement.cpp  GpxRteElement.h  GpxSimpleElement.cpp  GpxSimpleElement.h  GpxTrkElement.cpp  GpxTrkElement.h  GpxTrksegElement.cpp  GpxTrksegElement.h  GpxWptElement.cpp  GpxWptElement.h  GpxxExtensionsElement.cpp  GpxxExtensionsElement.h  ParseGPXDateTime.cpp  ParseGPXDateTime.h  gpx.cpp  gpx.h
src/graphics/: MergeBitmaps.cpp  MergeBitmaps.h  OCPNBitmap.cpp  OCPNBitmap.h  OCPNMemDC.cpp  OCPNMemDC.h  ocpn_pixel.cpp  ocpn_pixel.h
src/gui/: DefaultStyleManager.cpp  DefaultStyleManager.h  FontDesc.cpp  FontManager.h  Icon.h  Style.cpp  Style.h  StyleReader.h  Tool.cpp  Tool.h  XMLStyleReader.cpp  XMLStyleReader.h
src/libtcd/: tcd.cpp  tcd.h
src/linux/: X11FontPicker.cpp
src/mygdal/: s57.h  s57classregistrar.cpp
src/myiso8211/: ddfsubfielddefn.cpp
src/navigation/: AnchorDist.cpp  AnchorDist.h  DefaultRouteTracker.cpp  DefaultRouteTracker.h  MagneticVariation.h  RouteTracker.h  WaypointManager.h
src/nmea0183/: nmea0183.cpp  nmea0183.hpp  rte.cpp
src/plugin/: ChartPlugInWrapper.cpp  ChartPlugInWrapper.h  OCPN_MsgEvent.cpp  OCPN_MsgEvent.h  PlugInContainer.cpp  (+11 more)
src_extern/: README.md
src_extern/bzip2-1.0.6/: CMakeLists.txt
src_extern/libtcd-2.2.5/: CMakeLists.txt  tide_db.c
src_extern/pugixml-1.2/scripts/: CMakeLists.txt
src_extern/tinyxml-2.6.2/: CMakeLists.txt
src_extern/wxJSON-1.2.1/: CMakeLists.txt
src_extern/wxJSON-1.2.1/include/wx/: json_defs.h
src_test/: CMakeLists.txt  Test_PositionConvert.cpp  Test_UserColors.cpp
src_test/geo/: Test_BoundingBox.cpp  Test_LatLonBoundingBox.cpp  Test_Polygon.cpp  Test_Position.cpp
src_test/global/: Mock_ColorProvider.h  Mock_GUI.h  Mock_Navigation.h  Mock_System.h
src_test/gui/: Test_XMLStyleReader.cpp
src_test/navigation/: Test_AnchorDist.cpp  Test_MagneticVariation.cpp
src_test/util/: Test_ValueFilter.cpp  Test_Vector2D.cpp  Test_crc32.cpp  Test_uuid.cpp
(+84 files in other folders)
